# ball_segmentation

./: README.md  编译须知.txt
src/: CMakeLists.txt  OpenNI_Motor.cpp  OpenNI_Motor.h  pcd_segmentation.cpp  pcd_segmentation.h
